# arbify

./: .gitignore  Dockerfile.dev  IMG_3681.HEIC  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  twilio.py
arbify/: __main__.py  apioddshandler.py
dags/: arb_input.pickle  ncaaf_dag.py  tasks.py  testing.py
dags/clean/: __init__.py  columns.py
dags/detect/: comparison.py
dags/scrapers/: base_scraper.py  betonline.py  bovada.py  interops.py  sports_betting.py  youwager.py
dags/utils/: __init__.py
scrapers/: __init__.py  base_scraper.py  bovada.py  fivedimes.py  interops.py  sport_betting.py  sport_bettingag.py  youwager.py
scrapers/utils/: __init__.py
