[tool.poetry]
name = "arbify"
version = "0.1.0"
description = ""
authors = ["Adam Lefevre <adamtlefevre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

# package dependencies
requests = "^2.7.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
